<resources>
    <string name="app_name">MyRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="hallo_masuk">Hallo, Selamat Datang Kembali</string>
    <string name="hallo_daftar">Bergabung untuk mencari dan menjadi\ninspirasi dalam memasak</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_food">Food</string>
    <string name="title_drink">Drink</string>
    <string name="title_recipe">Recipe</string>
    <string name="kategori">Kategori makanan/minuman</string>
    <string name="nama_resep">Nama resep</string>
    <string name="desc_resep">Deskripsi Resep</string>
    <string name="greeting_dashboard">Halo, Selamat Datang Koki!</string>
    <string name="greeting2_dashboard">Mau masak apa hari ini ?\nAyo menjelajah dan berkarya dalam sebuah hidangan!!</string>
    <string name="rekomen_food">Rekomendasi Menu Resep Makanan</string>
    <string name="rekomen_drink">Rekomendasi Menu Resep Minuman</string>
    <string name="tradisional">Tradisional</string>
    <string name="modern">Modern</string>
    <string name="barat">Barat</string>
    <string name="asia">Asia</string>
    <string name="confirmation">Kamu yakin untuk keluar?\nKamu harus masuk kembali jika keluar</string>
</resources>