<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:backgroundTint="@color/cream"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cream"
        android:paddingBottom="5dp"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/ivResep"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="todo"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/kategori"
            android:textColor="@color/dark_chocolate"
            android:textSize="12dp"
            android:fontFamily="@font/lora_semi_bold"
            app:layout_constraintBottom_toTopOf="@id/tvName"
            app:layout_constraintStart_toEndOf="@id/ivResep"
            app:layout_constraintTop_toTopOf="@id/ivResep" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:maxLength="16"
            android:text="@string/nama_resep"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:fontFamily="@font/lora_semi_bold"
            app:layout_constraintStart_toEndOf="@id/ivResep"
            app:layout_constraintTop_toBottomOf="@id/tvCategory" />

        <TextView
            android:id="@+id/tvResepDesc"
            android:textSize="12dp"
            android:fontFamily="@font/lora_regular"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="200dp"
            android:maxLength="50"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/desc_resep"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <FrameLayout
            android:id="@+id/btn_resepku"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="@+id/tvResepDesc"
            app:layout_constraintTop_toBottomOf="@+id/tvResepDesc">

            <TextView
                android:id="@+id/tv_resepku"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lora_semi_bold"
                android:gravity="center"
                android:text="Hapus Resep"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <ProgressBar
                android:id="@+id/progress_resepku"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>