<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.presentation.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cream">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/lora_semi_bold"
                android:text="user"
                android:textColor="@color/dark_chocolate"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile"
                app:layout_constraintTop_toTopOf="parent" />
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/logo"
                android:layout_width="106dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <ScrollView
            android:id="@+id/sc_dashboard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_detail_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_greeting_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/lora_semi_bold"
                    android:gravity="center"
                    android:text="@string/greeting_dashboard"
                    android:textColor="@color/dark_chocolate"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_info_dashboard"
                    android:textSize="14dp"
                    android:fontFamily="@font/lora_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/greeting2_dashboard"
                    android:textColor="@color/dark_chocolate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_greeting_dashboard" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_Carousel"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/inContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_info_dashboard" />

                <LinearLayout
                    android:id="@+id/inContainer"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_recommendation_food"
                    android:gravity="center"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal"/>

                <TextView
                    android:id="@+id/tv_recommendation_food"
                    android:textSize="14dp"
                    android:fontFamily="@font/lora_semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rekomen_food"
                    android:textColor="@color/dark_chocolate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inContainer" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_food"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recommendation_food"
                    tools:listitem="@layout/item_card" />

                <RelativeLayout
                    android:id="@+id/view_loading_food"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white50"
                    app:layout_constraintTop_toBottomOf="@id/tv_recommendation_food">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:text="Please wait"
                        android:textColor="@color/dark_chocolate"
                        android:textSize="16sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_recommendation_drink"
                    android:textSize="14dp"
                    android:fontFamily="@font/lora_semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rekomen_drink"
                    android:textColor="@color/dark_chocolate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_food" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_drink"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_recommendation_drink"
                    tools:listitem="@layout/item_card" />

                <RelativeLayout
                    android:id="@+id/view_loading_drink"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white50"
                    app:layout_constraintTop_toBottomOf="@id/tv_recommendation_drink">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:text="Please wait"
                        android:textColor="@color/dark_chocolate"
                        android:textSize="16sp" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>